--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+2012-11-27
+"1.0" 全面支持pushState和hash，支持动画切换，丰富的事件，资源托管等，拆分magix核心与magix扩展2部分
 2012-2-6
 "0.3.0"分支归档
 开始"0.4.0"版本开发:Magix支持多底层切换,完善构建,打包,测试,文档和事例.
